# LearnOpengl

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dming/testopengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dming/testopengl/: CameraActivity.java  CameraRenderer.java  CameraSize.java  DLog.java  FboUtils.java  LauncherActivity.java  LoggerConfig.java  MainActivity.java  MarkDown.java  MyRenderer.java  ResReadUtils.java  (+6 more)
app/src/main/res/layout/: act_test.xml  activity_main.xml
app/src/main/res/raw/: alpha_frg.glsl  animation_frg.glsl  blur_frg.glsl  burr_frg.glsl  camera_frg.glsl  darken_light_frg.glsl  edge_frg.glsl  fragment_texture_shader.glsl  frg_normal.glsl  graph_fragment.glsl  graph_vertex.glsl  gray_frg.glsl  gray_ver.glsl  img_fragment.glsl  img_ver.glsl  img_vertex.glsl  line_frg.glsl  luminance_frg.glsl  mosaic_frg.glsl  process_frg.glsl  process_ver.glsl  sharpen_frg.glsl  smooth_frg.glsl  soul_frg.glsl  subdued_light_frg.glsl  test_line_frg.glsl  test_line_ver.glsl  test_process_ver.glsl  texture2d_frg.glsl  vertex_shader1.glsl  vertex_texture_shader.glsl
app/src/main/res/values/: colors.xml  strings.xml
giflib/: build.gradle
giflib/src/main/: AndroidManifest.xml
giflib/src/main/cpp/: CMakeLists.txt  GLUtils.cpp  GLUtils.h  GifJni.cpp  GifPlayer.cpp  GifPlayer.h  PthreadSleep.cpp  PthreadSleep.h  SyncTime.cpp  SyncTime.h  log.h
giflib/src/main/res/raw/: gif_process_frg.glsl  gif_process_ver.glsl
gradle/wrapper/: gradle-wrapper.properties
(+65 files in other folders)
